--- a/index.html
+++ b/index.html
@@ -3,103 +3,300 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Allan JAUDALLY - Mon CV</title>
-  <meta name="MyCV" content="MyCV">
-  <link rel="stylesheet" href="./css/styles.css" />
+  <title>Portfolio - Nerfic</title>
+  <meta name="Nerfic" content="Portfolio - Nerfic">
+  <link rel="stylesheet" href="./assets/css/bootstrap.css" />
+  <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
 <body>
 
-  <header class="main-header">
-    <nav class="nav" role="navigation">
-      <ul>
-        <a href="#"><span class="brand">Allan JAUDALLY</span></a>
-        <li><a href="#profil">Profil</a></li>
-        <li><a href="#">Expérience</a></li>
-        <li><a href="#">Formation</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <!-- PROFIL -->
+  <section>
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-12 col-lg-4">
 
-  <section id="profil" class="white-bg">
-    <div class="container flex">
-      <div>
-        <h1 class="text-center">Allan JAUDALLY</h1>
-        <h3 class="text-center blue">Développeur FullStack</h3>
-      </div>
-      <div>
-        <img class="img-rounded" src="./img/noemie_martin.png" alt="Allan JAUDALLY">
-      </div>
-    </div>
-  </section>
+          <!-- Me -->
 
-  <!-- PROFIL -->
-
-  <section class="blue-bg">
-    <div class="container">
-      <h2>Présentation</h2>
-      <ul>
-        <li>test</li>
-        <li>test</li>
-        <li>test</li>
-      </ul>
-    </div>
-  </section>
-
-  <section class="white-bg">
-    <div class="container">
-    <div class="profil">
-
-        <h2 class="blue">Expérience professionnel</h2>
-        <div class="flex">
-          <div>
-            <p class="text-bold">Stagiaire en développment chez TechLabs</p>
-            <p> 2018</p>
+          <div class="card mb-3">
+            <div class="card-body">
+              <div class="d-flex flex-column align-items-center text-center">
+                <img src="./assets/img/moi.jpg" class="img-thumbnail rounded-circle" width="">
+                <div class="mt-3">
+                  <h4>Allan</h4>
+                  <p class="text-secondary">Full Stack Developer</p>
+                  <p class="text-secondary">📍 Paris, FR</p>
+                </div>
+              </div>
+            </div>
           </div>
-          <p>Création du site web</p><br />
-          <p>Création des test unitaires</p>
-        </div>
-        <div class="flex">
-          <div>
-            <p class="text-bold">Bénévole Konexio</p>
-            <p> 2016-2018</p>
+
+          <!-- /Me -->
+          <!-- Social -->
+
+          <div class="card mb-3">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><i class="text-warning fas fa-envelope mr-2"></i>Email</h6>
+                <span class="text-secondary"><a href="mailto:jdll.allan@gmail.com">jdll.allan@gmail.com</a></span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><i class="fab fa-github github mr-2"></i>Github</h6>
+                <span class="text-secondary"><a href="https://github.com/nerfic" target="_blank">@nerfic</a></span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><i class="fab fa-twitter twitter mr-2"></i>Twitter</h6>
+                <span class="text-secondary"><a href="https://twitter.com/nerfic" target="_blank">@nerfic</a></span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><i class="fab fa-linkedin-in linkedin mr-2"></i>Linkedin</h6>
+                <span class="text-secondary"><a href="https://www.linkedin.com/in/nerfic/"
+                    target="_blank">@nerfic</a></span>
+              </li>
+            </ul>
           </div>
-          <p>Organisation des évenements</p>
-          <p>Validation des comptes de l'association</p>
+
+          <!-- /Social -->
+          <!-- Hard Skills -->
+
+          <div class="card mb-3">
+            <div class="card-body">
+              <h6 class="d-flex align-items-center mb-3"></i>Hard Skills</h6>
+              <small>HTML / CSS</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 80%" aria-valuenow="80"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <small>Bootstrap</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 82%" aria-valuenow="72"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <small>ReactJS</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 80%" aria-valuenow="89"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <small>React Native</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 66%" aria-valuenow="66"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <small>NodeJS</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 75%" aria-valuenow="55"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- /Hard Skills -->
+          <!-- Soft Skills -->
+
+          <div class="card mb-3">
+            <div class="card-body">
+              <h6 class="d-flex align-items-center mb-3"></i>Soft Skills</h6>
+              <small>HTML / CSS</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 80%" aria-valuenow="80"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <small>Bootstrap</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 82%" aria-valuenow="72"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <small>ReactJS</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 80%" aria-valuenow="89"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <small>React Native</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 66%" aria-valuenow="66"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <small>NodeJS</small>
+              <div class="progress mb-3" style="height: 10px">
+                <div class="progress-bar bg-myprimary" role="progressbar" style="width: 75%" aria-valuenow="55"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <!-- Tabs -->
+
+        <div class="col-12 col-lg-8">
+          <div class="card tab-card mb-3">
+            <div class="card-header tab-card-header">
+              <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" id="about-tab" data-toggle="tab" href="#one" role="tab" aria-controls="One"
+                    aria-selected="true">A propos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="project-tab" data-toggle="tab" href="#two" role="tab" aria-controls="Two"
+                    aria-selected="false">Projets</a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- Tabs > Content -->
+
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active p-3" id="one" role="tabpanel" aria-labelledby="about-tab">
+                <div class="effet-zoom">
+                  <p class="text-muted text-justify">Irure irure aute sunt qui est adipisicing. Eu fugiat ex elit
+                    consequat
+                    fugiat. Duis
+                    in aute commodo officia ex consectetur proident occaecat sunt exercitation voluptate. Aliqua id ea
+                    reprehenderit culpa tempor minim. Et ullamco do aute aute adipisicing excepteur laborum dolore duis
+                    minim voluptate aliquip ex pariatur. Cillum irure velit fugiat mollit ea Lorem officia et.</p>
+                </div>
+                <hr>
+
+                <div class="effet-zoom">
+                  <h4 class="text-muted mb-4">Expériences</h4>
+                  <div class="mb-3">
+                    <span class="text-myprimary">Lead Dévelopeur @ <a href="#">Konexio</a></span>
+                    <span class="float-right font-weight-bold text-myprimary">2020-2020</span>
+                  </div>
+                  <p class="text-muted text-justify">Irure eiusmod non officia non officia irure dolore. Nostrud amet
+                    veniam sint id
+                    velit ad ullamco
+                    voluptate aliqua adipisicing ipsum deserunt. Ut elit aliqua ad nostrud. Pariatur velit ipsum magna
+                    veniam officia laborum ullamco excepteur id eu.</p>
+
+
+                  <div class="mb-3">
+                    <span class="text-myprimary">Lead Dévelopeur @ <a href="#">Konexio</a></span>
+                    <span class="float-right font-weight-bold text-myprimary">2020-2020</span>
+                  </div>
+                  <p class="text-muted text-justify">Irure eiusmod non officia non officia irure dolore. Nostrud amet
+                    veniam sint id
+                    velit ad ullamco
+                    voluptate aliqua adipisicing ipsum deserunt. Ut elit aliqua ad nostrud. Pariatur velit ipsum magna
+                    veniam officia laborum ullamco excepteur id eu.</p>
+                </div>
+                <hr>
+                <div class="effet-zoom">
+                  <h4 class="text-muted mb-4">Formations</h4>
+                  <div class="mb-3">
+                    <span class="text-myprimary">Etudiant @ <a href="#">Konexio</a></span>
+                    <span class="float-right font-weight-bold text-myprimary">2020-2020</span>
+                  </div>
+                  <p class="text-muted text-justify">Irure eiusmod non officia non officia irure dolore. Nostrud amet
+                    veniam sint id
+                    velit ad ullamco
+                    voluptate aliqua adipisicing ipsum deserunt. Ut elit aliqua ad nostrud. Pariatur velit ipsum magna
+                    veniam officia laborum ullamco excepteur id eu.</p>
+
+                  <div class="mb-3">
+                    <span class="text-myprimary">Etudiant @ <a href="#">42</a></span>
+                    <span class="float-right font-weight-bold text-myprimary">2017-2018</span>
+                  </div>
+                  <p class="text-muted text-justify">Irure eiusmod non officia non officia irure dolore. Nostrud amet
+                    veniam sint id
+                    velit ad ullamco
+                    voluptate aliqua adipisicing ipsum deserunt. Ut elit aliqua ad nostrud. Pariatur velit ipsum magna
+                    veniam officia laborum ullamco excepteur id eu.</p>
+                </div>
+              </div>
+
+              <div class="tab-pane fade p-3" id="two" role="tabpanel" aria-labelledby="project-tab">
+                <div class="row">
+                  <div class="col-12 col-lg-4 text-center">
+                    <a class="text-decoration-none" href="#">
+                      <img class="img-fluid" src="https://via.placeholder.com/400x300/F0B7A4/FFFFFF">
+                      <p class="mt-1 mb-1">Project Title</p>
+                    </a>
+                    <div class="project-line"></div>
+                    <small>HTML / CSS / PHP</small>
+                  </div>
+                  <div class="col-12 col-lg-4 text-center">
+                    <a class="text-decoration-none" href="#">
+                      <img class="img-fluid" src="https://via.placeholder.com/400x300/F0B7A4/FFFFFF">
+                      <p class="mt-1 mb-1">Project Title</p>
+                    </a>
+                    <div class="project-line"></div>
+                    <small>HTML / CSS / PHP</small>
+                  </div>
+                  <div class="col-12 col-lg-4 text-center">
+                    <a class="text-decoration-none" href="#">
+                      <img class="img-fluid" src="https://via.placeholder.com/400x300/F0B7A4/FFFFFF">
+                      <p class="mt-1 mb-1">Project Title</p>
+                    </a>
+                    <div class="project-line"></div>
+                    <small>HTML / CSS / PHP</small>
+                  </div>
+                </div>
+                <hr>
+                <div class="row mt-4">
+                  <div class="col-12 col-lg-4 text-center">
+                    <a class="text-decoration-none" href="#">
+                      <img class="img-fluid" src="https://via.placeholder.com/400x300/F1D1B5/FFFFFF">
+                      <p class="mt-1 mb-1">Project Title</p>
+                    </a>
+                    <div class="project-line"></div>
+                    <small>ReactJS / NodeJS</small>
+                  </div>
+                  <div class="col-12 col-lg-4 text-center">
+                    <a class="text-decoration-none" href="#">
+                      <img class="img-fluid" src="https://via.placeholder.com/400x300/F1D1B5/FFFFFF">
+                      <p class="mt-1 mb-1">Project Title</p>
+                    </a>
+                    <div class="project-line"></div>
+                    <small>ReactJS / NodeJS</small>
+                  </div>
+                  <div class="col-12 col-lg-4 text-center">
+                    <a class="text-decoration-none" href="#">
+                      <img class="img-fluid" src="https://via.placeholder.com/400x300/F1D1B5/FFFFFF">
+                      <p class="mt-1 mb-1">Project Title</p>
+                    </a>
+                    <div class="project-line"></div>
+                    <small>ReactJS / NodeJS</small>
+                  </div>
+                </div>
+              </div>
+
+              <!-- /Tabs > Content -->
+
+            </div>
+            <!-- /Tabs -->
+          </div>
+
+          <div class="card mb-3">
+            <div class="card-body">
+              <h4 class="text-muted mb-3"></i>Contactez-moi:</h4>
+              <form>
+                <div class="form-group">
+                  <label for="email">Adresse email</label>
+                  <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                </div>
+                <div class="form-group">
+                  <label for="name">Nom ou Entreprise</label>
+                  <input type="text" class="form-control" id="name" placeholder="Steve Jobs / Apple" required>
+                </div>
+                <div class="form-group">
+                  <label for="message">Votre message</label>
+                  <textarea class="form-control" id="message" rows="2" required></textarea>
+                </div>
+                <button type="sumbit" class="float-right btn btn-primary">Envoyer</button>
+              </form>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
   </section>
 
-  <section class="blue-bg">
-    <div class="container">
-      <div>
-        <h2>Formation</h2>
-      </div>
-      <div>
-        <span class="text-bold">Ecole 42</span><span class="float-right"> 2018</span>
-      </div>
-      <div>
-        <span class="text-bold">Bac Pro SEN</span> <span class="float-right"> 2016-2018</span>
-      </div>
-    </div>
-  </section>
-
-  <section class="white-bg">
-    <div class="container">
-      <h2 class="blue">Passions</h2>
-      <div>
-        <p>Automobile - Technologie - Voyages</p>
-      </div>
-    </div>
-  </section>
-
-  <footer class="">
-    <p>footer</p>
-  </footer>
-
+  <script src="https://kit.fontawesome.com/d0e70cde13.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="./assets/js/bootstrap.js"></script>
 </body>
 
 </html>
