add style for button

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                   <label for="message">Votre message</label>
                   <textarea class="form-control" id="message" rows="2" required></textarea>
                 </div>
-                <button type="sumbit" class="float-right btn btn-primary">Envoyer</button>
+                <button type="sumbit" class="float-right btn btn-myprimary">Envoyer</button>
               </form>
             </div>
           </div>
