--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="Nerfic" content="Portfolio - Nerfic">
   <link rel="stylesheet" href="./assets/css/bootstrap.css" />
   <link rel="stylesheet" href="./assets/css/styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
